--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,10 +28,100 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
 
+    <div class="container">
+      <!-- 9am -->
+      <div class="row">
+        <div class="time col-1">
+          9 a.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--10am-->
+      <div class="row">
+        <div class="time col-1">
+          10 a.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--11am-->
+      <div class="row">
+        <div class="time col-1">
+          11 a.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--12pm-->
+      <div class="row">
+        <div class="time col-1">
+          12 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--1pm-->
+      <div class="row">
+        <div class="time col-1">
+          1 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--2pm-->
+      <div class="row">
+        <div class="time col-1">
+          2 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!--3pm-->
+      <div class="row">
+        <div class="time col-1">
+          3 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!-- 4pm -->
+      <div class="row">
+        <div class="time col-1">
+          4 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+
+      <!-- 5 pm -->
+      <div class="row">
+        <div class="time col-1">
+          5 p.m. 
+        </div>
+        <input id="AddtoDo" class="col-9 description" type="text" placeholder="TO-DO"/>
+        <button id="saveBTN" class="col-1">🔒</button>
+        <button id="delBTN" class="col-1">Delete</button>
+      </div>
+      </div>
+
+    <script src="./js/java.js"></script>  
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
